--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -5,7 +5,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  height: 10rem;
+  min-height: 10rem;
 }
 
 .home-header-text {
